fix(projects): add background colour behind images, animation on img

--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -10,6 +10,11 @@
   }
 }
 
+.imageContainer {
+  background: #282c34;
+  border-radius: 15px;
+}
+
 ul {
   list-style-type: none;
   display: flex;
